--- a/docs/style.css
+++ b/docs/style.css
@@ -14,3 +14,21 @@ li,
 p {
   font-family: 'Raleway', sans-serif;
 }
+#menu-outer {
+	height: 84px;
+
+}
+
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+
+ul#horiz-list {
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+	}
+	ul#horiz-list li {
+    vertical-align: middle;
+	}
